Reparos menores día 1

--- a/Cuaderno/tex/dia1.tex
+++ b/Cuaderno/tex/dia1.tex
@@ -594,7 +594,7 @@ En este tutorial te mostraremos cómo crear tu Portafolio, que incluirá todo el
     \label{fig:SiteAddImage3}
   \end{figure}
 
-\item También puedes insertar una imagen que esté en tu Para ello debes seleccionar la opción ``Imágenes subidas'' en la ventana del punto anterior, y subir la imagen que desees utilizar.
+\item También puedes insertar una imagen que esté en tu portafolio. Para ello debes seleccionar la opción ``Imágenes subidas'' en la ventana del punto anterior, y subir la imagen que desees utilizar.
 
 \item Personaliza el Sidebar (barra lateral) de tu sitio. El sidebar en todos las páginas de tu sitio, y puedes personalizarlo para incluir diferentes elementos y enlaces. Sal del modo de edición y selecciona el botón de opciones (el que tiene un engranaje). Ahí selecciona la opción ``Modificar el diseño del sitio'', tal como se muestra en la Figura~\ref{fig:SiteSidebar1}.
 
@@ -666,7 +666,7 @@ Puedes crear la aplicación que quieras basándote en la idea y plantilla origin
 
 \item Debe tener al menos cuatro sonidos que se reproduzcan en respuesta a distintos eventos (por ejemplo, presionar botones, agitar dispositivo, recibir mensajes de texto, etc.)
 
-\item Debe tener algun comportamiento condicional, usando bloques \block{si, sino}.
+\item Debe tener algún comportamiento condicional, usando bloques \block{si, sino}.
 
 \end{itemize}
 
