Modificados detalles día 2

--- a/Cuaderno/tex/dia2.tex
+++ b/Cuaderno/tex/dia2.tex
@@ -53,14 +53,14 @@ Siguiendo este tutorial aprenderás a:
 
 \subsection*{Para Empezar}
 
-Aseguráte que tu computador y teléfono están configurados para usar
-\AppInventor. Crea un nuevo proyecto y nombrálo \appName{PintaFotos}. Abre el
+Asegúrate que tu computador y teléfono están configurados para usar
+\AppInventor. Crea un nuevo proyecto y nómbralo \appName{PintaFotos}. Abre el
 \blockEditor y comprueba que puedes probar tu aplicación en tu
 dispositivo mediante la conexión USB. Consulta con tu tutor ante
 cualquier problema!
 
 Para empezar, ve al panel de propiedades a la derecha del \designer y
-cambia el titulo de la pantalla a ``PintaFotos''. Deberías ver este
+cambia el título de la pantalla a ``PintaFotos''. Deberías ver este
 cambio reflejado en el teléfono, con el nuevo título apareciendo en la
 barra de títulos de tu app.
 
@@ -301,7 +301,7 @@ del dispositivo.
 \subsubsection*{Agregar el Evento Tocar para Dibujar un Punto}
 
 Primero, dispondrás los objetos de manera que cuando tocas el
-\component{LienzoDeDibujo}, se dibujara un punto en el lugar del lienzo que
+\component{LienzoDeDibujo}, se dibuje un punto en el lugar del lienzo que
 toques:
 	
 \begin{enumerate}
@@ -366,7 +366,7 @@ una \parameter{y}. Solamente acuérdate que la \parameter{x} y
 la \parameter{y} para el evento \block{LienzoDeDibujo.Tocar} te dice
 dónde tocó el usuario, mientras que el \parameter{x} e \parameter{y}
 para el evento \block{LienzoDeDibujo.DibujarCírculo} son espacios
-abiertos para que tú definas donde el se dibujará el círculo. Dado que
+abiertos para que tú definas donde se dibujará el círculo. Dado que
 quieres que el círculo aparezca donde tocó el usuario, conectarás los
 valores \parameter{x} e \parameter{y} desde el
 \block{LienzoDeDibujo.Tocar} de la misma forma que los valores de los
@@ -431,7 +431,7 @@ ilustra en la~\Cref{fig:PaintPot7}.
   tipeas un número, crea un bloque numérico.
 
   \paragraph{Prueba tu Aplicación!} Usa tu dispositivo para probar lo
-  que has desarrollado hasta ahora. Toca el
+  que has desarrollado hasta ahora. Al tocar el
   \component{LienzoDeDibujo}, tu dedo debería dejar un punto en cada
   lugar que toques. Los puntos serán rojos si configuraste la
   propiedad del \property{LienzoDeDibujo.ColorDePintura} como color
@@ -633,7 +633,7 @@ línea, puedes cambiar el valor de \parameter{r}. Para probar esto,
 intenta cambiar el 5 por un 10 y pruébalo en el teléfono para ver cómo
 aparece.
 
-El único tamaño que el usuario podrá usar es él que tu indicas como
+El único tamaño que el usuario podrá usar es el que tú indicas como
 argumento para el radio del círculo. ¿Pero qué pasa si el usuario
 quiere cambiar el tamaño de los puntos? Vamos a modificar el programa
 de manera que el usuario---no solo el programador---pueda cambiar el
@@ -856,7 +856,7 @@ propiedad? ¿Cómo se diferencia de una propiedad?
 
 \section{Tutorial: Atrapa el Topo}
 
-En este tutorial desarrollaras el juego \emph{Atrapa el Topo},
+En este tutorial desarrollarás el juego \emph{Atrapa el Topo},
 inspirado en las salas de juegos clásicas, en las que unos topos
 mecánicos saltan fuera de su hueco, y los jugadores ganan puntos
 golpeándolos con un mazo. El juego fue creado por Ellen Spertus, un
@@ -879,8 +879,8 @@ la~\Cref{fig:MoleMash1}, implementarás las siguientes funcionalidades:
   puntos (un punto por topo tocado), y el topo se mueve de inmediato a
   otro lugar.
 
-\item Tocar la pantalla sin alcanzar tocar el topo provoca que el
-  marcador de toques perdidos aumenta.
+\item Tocar la pantalla sin alcanzar a tocar el topo provoca que el
+  marcador de toques perdidos aumente.
 
 \item Al presionar el botón ``Reiniciar'' se reinicia el contador de
   golpes logrados y perdidos.
