Reparos menores introduccion día 4

--- a/Cuaderno/tex/introduccion-dia4.tex
+++ b/Cuaderno/tex/introduccion-dia4.tex
@@ -5,7 +5,7 @@ Hoy aprenderás a desarrollar aplicaciones que envían mensajes de texto
 (SMS) y que pueden procesar mensajes de texto
 recibidos. Desarrollaremos la aplicación \appName{No SMS al Volante},
 que responde automáticamente a los mensajes recibidos con una
-respuesta predeterminada. Tambíen aprenderás a manejar una nueva
+respuesta predeterminada. También aprenderás a manejar una nueva
 manera de almacenar datos en variables, usando \emph{listas}. Las
 listas te permiten tener en un mismo lugar una \emph{colección} de
 valores, y realizar operaciones sobre estos valores de manera
