Nuevos reparos menores día 4

--- a/Cuaderno/tex/dia4.tex
+++ b/Cuaderno/tex/dia4.tex
@@ -575,7 +575,7 @@ abrirla. ¿Aparece el mensaje personalizado que pusiste?
 
 Ahora modificarás la aplicación de tal manera que cuando recibes un
 mensaje de texto, se habla en voz alta el número de teléfono del
-remitente y su mensaje de texto. La idea es que cuando estas manejando
+remitente y su mensaje de texto. La idea es que cuando estás manejando
 y escuchas un mensaje de texto llegar, va a estar tentado de leer el
 texto incluso si sabes que la aplicación va a mandar una respuesta
 automática. Con la funcionalidad de texto-a-voz, puedes escuchar el
