Reparos menores día 6

--- a/Cuaderno/tex/dia6.tex
+++ b/Cuaderno/tex/dia6.tex
@@ -143,7 +143,7 @@ del \variable{índice}.
 \item Para procesar la respuesta del usuario debemos usar el evento
   \block{BotónContestar.Click}. Aquí debemos comparar si el texto
   ingresado por el usuario coincide con la palabra actual. Si es así,
-  incrementamos el \variable{índice} y cambios las fotos. En caso
+  incrementamos el \variable{índice} y cambiamos las fotos. En caso
   contrario, mostramos un mensaje al usuario diciéndole que se
   equivocó. El código se muestra en la~\Cref{fig:Slides4}.
 
