Reparos menores introduccion día 7

--- a/Cuaderno/tex/introduccion-dia7.tex
+++ b/Cuaderno/tex/introduccion-dia7.tex
@@ -3,7 +3,7 @@ Hola! Bienvenido al séptimo y último (noooo :( ) día del taller Programa Tus 
 \paragraph{}
 Hoy aprenderás sobre los \emph{algoritmos}, los cuales están en el
 corazón de la informática y la ciencia de la computación. Los
-algoritmos son las instrucciones o recetas de cocina con la que tu
+algoritmos son las instrucciones o recetas de cocina con la que tú
 como programador le dices al computador qué tiene que hacer. En
 \AppInventor ya hemos usado algoritmos sencillos, los cuales se
 implementan como bloques de procedimientos. En este documento
