Reparos menores día 7

--- a/Cuaderno/tex/dia7.tex
+++ b/Cuaderno/tex/dia7.tex
@@ -61,9 +61,9 @@ que los estudiantes aprenden mejor cuando están construyendo su propio
 conocimiento e ideas. Algo similar pasa en este taller, donde buscamos
 que tú Programes Tus Ideas!
 
-El enfoque usado por Papert se conoce como \emph{aprendiza
+El enfoque usado por Papert se conoce como \emph{aprendizaje
   constructivista}, el cual se inspira en la visión de que los
-individuos de aprendizaje construyen modelos mentales para entender el
+individuos  construyen modelos mentales para entender el
 mundo alrededor de ellos. Sin embargo, el constructivismo sostiene que
 el aprendizaje ocurre con mayor efectividad cuando las personas están
 activas construyendo \emph{objetos tangibles en el mundo real}.
@@ -138,9 +138,9 @@ mirarlos si tienes curiosidad, pero no los cambies!).
 Un \emph{algoritmo} es una secuencia precisa de instrucciones que,
 cuando se ejecutan en un computador, controlan el comportamiento del
 computador. Un algoritmo es similar a una \emph{receta de cocina} pero
-tiene uqe ser mucho más preciso que eso si se espera que un computador
+tiene que ser mucho más preciso que eso si se espera que un computador
 la pueda seguir. Las recetas a menudo tienen instrucciones muy
-imprecisas que un cocinero novato no sabría como hacer. Por ejemplo,
+imprecisas que un cocinero novato no sabría cómo hacer. Por ejemplo,
 ``revuelva hasta que la masa esté suave''. Un cocinero experimentado
 podría saber exactamente qué significa eso, pero no todos lo sabrían.
 
@@ -219,7 +219,7 @@ una hoja cuadriculada para diseñar los algoritmos de los ejercicios.
   \centering
   \includegraphics[scale=0.6]{Logo4}
   \caption{Usando abstracción: código para procedimiento
-    \block{cuadrado20} y cómo se llama desde el procedimiento
+    \block{cuadrado10} y cómo se llama desde el procedimiento
     \block{dibujar}.}
   \label{fig:Logo4}
 \end{figure}
@@ -519,8 +519,8 @@ dibujar una estrella completa?'
   del lado.
 
 \paragraph{Nota Importante!} En \AppInventor y otros lenguajes de
-programación, los parámetros pueden tener \emph{cualquier} nombre. or
-lo tanto es importante usar nombres que son describen el propósito del
+programación, los parámetros pueden tener \emph{cualquier} nombre. Por
+lo tanto es importante usar nombres que describen el propósito del
 párametro. Esto hará que leer el código sea más fácil para ti y para
 otros programadores. Por ejemplo, compara los nombres en
 la~\Cref{fig:Logo14}.
